[metadata]
name = codingTracker
author = Emmanuel Guefif
author_email = eguefif@fastmail.com
version = 0.0.2
description = This app track how many hours you spend coding in a language.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/eguefif/codingTracker
license = MIT License
license_files = LICENSE
classifiers =
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: POSIX :: Linux
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.10
keywords = tracking, coding, languages, hour, hours

[options]
packages = find:
install_requires =

def =
	black
	flake8
	isort
	mypy

[options.entry_points]
console_scripts =
	codingTracker = codingTracker.client:main
	codingTrackerServer = codingTracker.server:main
	codingTrackerSetup = codingTracker.setup_app:main

[flake8]
max-line-length = 100
